@startuml

title __FUTUREEXCEPTION's Class Diagram__\n

  namespace com.exception {
    namespace futureexception {
      class com.exception.futureexception.SendResult {
          - producerRecord : Record<K, V>
          + SendResult()
          + getProducerRecord()
          + getRecordMetadata()
          + toString()
      }
    }
  }
  

  namespace com.exception {
    namespace futureexception {
      class com.exception.futureexception.SendResult.Record {
          ~ Record()
      }
    }
  }
  

  namespace com.exception {
    namespace futureexception {
      class com.exception.futureexception.SendResult.RecordMeta {
          ~ name : String
          ~ RecordMeta()
      }
    }
  }
  

  namespace com.exception {
    namespace futureexception {
      class com.exception.futureexception.SendTest {
          + Send()
          + sendMessageInfo()
      }
    }
  }
  

  namespace com.exception {
    namespace futureexception {
      class com.exception.futureexception.futureTest {
          {static} + main()
      }
    }
  }
  

  com.exception.futureexception.SendResult o-- com.exception.futureexception.SendResult.RecordMeta : recordMetadata
  com.exception.futureexception.SendResult +-down- com.exception.futureexception.SendResult.Record
  com.exception.futureexception.SendResult +-down- com.exception.futureexception.SendResult.RecordMeta
  com.exception.futureexception.SendResult.Record o-- K : name
  com.exception.futureexception.SendResult.Record o-- V : value


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
